2007-01-11 TADA Tadashi <sho@spc.gr.jp>
	* plugin/*.rb: modified to use ERB::Util.h instead of CGI::escpaeHTML and
	escape base-html.

2007-01-05 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatnew-list.rb: feed updates without filtered comments.
	* plugin/whatnew-list.rb: replace labels 'RDF' to 'feed'.

2006-04-15 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.4.

2006-03-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatnew-list.rb: follow core 2.1.3.20060318.
	* plugin/whatnew-list.rb: support Mobile Link Discovery.

2005-10-20 TADA Tadashi <sho@spc.gr.jp>
	* plugin/archive.rb: fix error under running tdiary_search.
	* plugin/blog-style.rb: separate from archive.rb.

2005-10-16 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: insert correct counts of comments and TrackBacks.

2005-10-13 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: support dc:subject element in RSS for categories.

2005-10-09 TADA Tadashi <sho@spc.gr.jp>
	* README: fix about style file settings.

2005-10-07 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/blogwiki_style.rb: delete duplicated div.section.

2005-09-29 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.3.

2002-09-26 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatnew-list.rb: fix bug to count TrackBack without tb-show.rb.

2002-09-26 vette <vette at mail.ne.jp>
	* plugin/whatsnew-list.rb: fix bug to call body_enter_proc.

2002-09-25 TADA Tadahi <sho@spc.gr.jp>
	* plugin/recent-entry.rb: remove category from title.
	* plugin/whatnew-list.rb: apply_plugin for each entry.

2002-09-21 vette <vette at mail.ne.jp>
	* plugin/blog-category.rb: insert category list into update form.

2002-09-19 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add a checkbox for don't update RSS, and some bug fix.

2002-09-18 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: append 'Comments(N)' and 'TrackBacks(M)' into
	description of RSS.
	* plugin/title-navi.rb: hide date fields also in showcomment mode.

2002-09-16 TADA Tadahi <sho@spc.gr.jp>